--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quantiva-website",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -11,9 +12,24 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@vercel/og": "^0.0.21",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "autoprefixer": "^10.4.21",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
+    "mermaid": "^11.12.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "recharts": "^3.2.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +37,21 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js",
+    "dev": "concurrently \"npm start\" \"npm run server\"",
+    "generate:sitemap": "node sitemap.js",
+    "generate:og": "node scripts/generate-og.mjs",
+    "validate:cases": "node scripts/validate-cases.mjs",
+    "validate:cases:strict": "node scripts/validate-cases.mjs --strict",
+    "report:cases": "node scripts/report-cases.mjs",
+    "sitemap": "npm run generate:sitemap",
+    "build:sitemap": "npm run generate:sitemap && npm run build",
+    "postbuild": "npm run generate:sitemap && npm run generate:og && npm run validate:cases:strict",
+    "heroku-postbuild": "npm run build",
+    "vite:dev": "vite",
+    "vite:build": "vite build",
+    "vite:preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +70,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
+    "@octokit/rest": "^22.0.0",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/mermaid": "^9.1.0",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@vercel/blob": "^2.0.0",
+    "concurrently": "^9.2.1",
+    "picocolors": "^1.1.1",
+    "sharp": "^0.34.4",
+    "table": "^6.9.0"
   }
 }
