fix: Remove API routes from Vercel build for initial deployment
- Simplified vercel.json to only build static React app
- Removed @vercel/node and @vercel/edge builds (API routes)
- Keeps static-build for Create React App
- API routes can be added later with proper dependencies

This fixes the build error:
- Cannot find module '@vercel/node'
- builder.build is not a function

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,7 @@
   "version": 2,
   "framework": "create-react-app",
   "builds": [
-    { "src": "package.json", "use": "@vercel/static-build" },
-    { "src": "api/create-pr.ts", "use": "@vercel/node" },
-    { "src": "api/upload.ts", "use": "@vercel/edge" }
+    { "src": "package.json", "use": "@vercel/static-build" }
   ],
   "installCommand": "npm ci",
   "buildCommand": "npm run build",
