fix: Temporarily disable case validation workflows
These workflows require additional setup (case data, validation scripts).
Changed to manual trigger only (workflow_dispatch) until the case
management system is fully implemented.

Workflows can be re-enabled by uncommenting the trigger conditions.

--- a/.github/workflows/report-cases.yml
+++ b/.github/workflows/report-cases.yml
@@ -1,9 +1,11 @@
 # .github/workflows/report-cases.yml
 name: Report Cases in PR
 
+# Temporarily disabled - enable when case data system is fully implemented
 on:
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch:  # Manual trigger only
+  # pull_request:
+  #   branches: [ main, master ]
 
 jobs:
   report:
