--- a/.github/workflows/validate-cases.yml
+++ b/.github/workflows/validate-cases.yml
@@ -1,21 +1,23 @@
 # .github/workflows/validate-cases.yml
 name: Validate Cases JSON
 
+# Temporarily disabled - enable when case data system is fully implemented
 on:
-  push:
-    paths:
-      - "src/data/cases.json"
-      - "scripts/validate-cases.mjs"
-      - "scripts/generate-og.mjs"
-      - "scripts/migrate-cases.mjs"
-      - "sitemap.js"
-  pull_request:
-    paths:
-      - "src/data/cases.json"
-      - "scripts/validate-cases.mjs"
-      - "scripts/generate-og.mjs"
-      - "scripts/migrate-cases.mjs"
-      - "sitemap.js"
+  workflow_dispatch:  # Manual trigger only
+  # push:
+  #   paths:
+  #     - "src/data/cases.json"
+  #     - "scripts/validate-cases.mjs"
+  #     - "scripts/generate-og.mjs"
+  #     - "scripts/migrate-cases.mjs"
+  #     - "sitemap.js"
+  # pull_request:
+  #   paths:
+  #     - "src/data/cases.json"
+  #     - "scripts/validate-cases.mjs"
+  #     - "scripts/generate-og.mjs"
+  #     - "scripts/migrate-cases.mjs"
+  #     - "sitemap.js"
 
 jobs:
   validate-build-strict:
