fix: Explicitly specify craco.config.cjs in npm scripts
- Add --config craco.config.cjs flag to start/build/test scripts
- Ensures CRACO uses .cjs file instead of looking for .js
- Fixes GitHub Actions build error
- Required because package.json has "type": "module"

Testing:
- Local build successful with explicit config
- Resolves "module is not defined in ES module scope" error

--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "craco start --config craco.config.cjs",
+    "build": "craco build --config craco.config.cjs",
+    "test": "craco test --config craco.config.cjs",
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "concurrently \"npm start\" \"npm run server\"",
