--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "quantiva-website",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
@@ -36,9 +35,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start --config craco.config.cjs",
-    "build": "craco build --config craco.config.cjs",
-    "test": "craco test --config craco.config.cjs",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "concurrently \"npm start\" \"npm run server\"",
