--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "concurrently \"npm start\" \"npm run server\"",
-    "generate:sitemap": "node sitemap.js",
+    "generate:sitemap": "node sitemap.mjs",
     "generate:og": "node scripts/generate-og.mjs",
     "validate:cases": "node scripts/validate-cases.mjs",
     "validate:cases:strict": "node scripts/validate-cases.mjs --strict",
