--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.0.21",
     "@vercel/speed-insights": "^1.2.0",
     "ajv": "^8.17.1",
