--- a/vercel.json
+++ b/vercel.json
@@ -1,48 +1,19 @@
 {
-  "version": 2,
-  "framework": "create-react-app",
-  "builds": [
-    { "src": "package.json", "use": "@vercel/static-build" }
-  ],
-  "installCommand": "npm ci",
-  "buildCommand": "npm run build",
-  "outputDirectory": "build",
-
   "rewrites": [
-    { "source": "/(de|en)(/.*)?", "destination": "/index.html" },
-    { "source": "/cases", "destination": "/index.html" },
-    { "source": "/cases/(.*)", "destination": "/index.html" }
-  ],
-
-  "headers": [
     {
       "source": "/(.*)",
-      "headers": [
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
-        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
-        { "key": "Permissions-Policy", "value": "geolocation=(), microphone=(), camera=()" },
-        { "key": "Strict-Transport-Security", "value": "max-age=63072000; includeSubDomains; preload" }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
-    },
-    {
-      "source": "/(.*)\\.(css|js|woff2)",
-      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
-    },
-    {
-      "source": "/(.*)\\.(mp4|webm)",
-      "headers": [{ "key": "Cache-Control", "value": "public, max-age=86400" }]
-    },
-    {
-      "source": "/sitemap.xml",
-      "headers": [{ "key": "Cache-Control", "value": "public, max-age=3600" }]
+      "destination": "/index.html"
     }
   ],
-
-  "cleanUrls": true,
-  "trailingSlash": false
+  "headers": [
+    {
+      "source": "/static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
