docs: deprecate legacy PR API, clarify server-only code, add sitemap CI, merge checklist, and README local-dev notes

--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "server": "node server.js",
+    "server": "node scripts/local-dev/server.js",
     "dev": "concurrently \"npm start\" \"npm run server\"",
     "generate:sitemap": "node sitemap.mjs",
+    "sitemap:update": "node scripts/update-sitemap-lastmod.mjs",
     "generate:og": "node scripts/generate-og.mjs",
     "validate:cases": "node scripts/validate-cases.mjs",
     "validate:cases:strict": "node scripts/validate-cases.mjs --strict",
