--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -1,46 +1,50 @@
-name: Generate sitemap
+name: Sitemap Generator
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
       - 'src/data/cases.json'
-      - 'src/App.tsx'
+      - 'src/data/content.json'
+      - 'src/QuantivaWebsite.tsx'
       - 'sitemap.mjs'
-      - 'package.json'
   schedule:
-    - cron: '0 2 * * 1' # every Monday 02:00 UTC
-  workflow_dispatch: {}
+    # Runs daily at 2 AM UTC
+    - cron: '0 2 * * *'
+  workflow_dispatch:
 
 jobs:
-  build:
+  generate-sitemap:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
-
-      - name: Use Node.js 18
+          token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-
-      - name: Install deps (ci)
+          cache: 'npm'
+      
+      - name: Install dependencies
         run: npm ci
-
-      - name: Generate sitemap
-        run: node sitemap.mjs
-
-      - name: Commit and push sitemap if changed
+      
+      - name: Generate sitemap with updated lastmod
+        run: npm run generate:sitemap
+      
+      - name: Check for changes
+        id: git-check
         run: |
-          if [[ -n "$(git status --porcelain public/sitemap.xml)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add public/sitemap.xml
-            git commit -m "chore(ci): update sitemap.xml"
-            git push
-          else
-            echo "No sitemap changes"
-          fi
-
+          git diff --exit-code public/sitemap.xml || echo "changed=true" >> $GITHUB_OUTPUT
+      
+      - name: Commit and push sitemap
+        if: steps.git-check.outputs.changed == 'true'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add public/sitemap.xml
+          git commit -m "chore: auto-update sitemap.xml lastmod [skip ci]"
+          git push
