fix: resolve critical bugs and config issues from technical review
Critical Bugs Fixed:
- Fix local Express server paths (../../build instead of ./build)
- Update public/index.html with Quantiva branding and SEO meta tags
- Remove unused Vite scripts from package.json and README

Configuration Improvements:
- Update vercel.json with comprehensive static-only config
- Add explicit rewrites for all routes (services, capabilities, docs, admin)
- Set framework: create-react-app and proper build commands

Assets:
- Create ASSETS_CHECKLIST.md documenting all assets
- Verify all favicons, OG images, and PWA assets are present
- Add image optimization guidelines and testing checklist

SEO Enhancements:
- Replace 'React App' with 'Quantiva Advisory – SAP, Cloud & AI Consulting'
- Add comprehensive meta tags (description, keywords, author)
- Add Open Graph tags for Facebook/LinkedIn
- Add Twitter Card meta tags
- Update theme-color to #0f766e (Quantiva teal)

Addresses feedback:
- Local server path bug (scripts/local-dev/server.js)
- CRA default branding in index.html
- Vite scripts without dependencies
- Incomplete vercel.json configuration
- Asset documentation

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,42 @@
-{  "rewrites": [
+{
+  "version": 2,
+  "framework": "create-react-app",
+  "builds": [
     {
-      "source": "/(.*)",
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "installCommand": "npm ci",
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "rewrites": [
+    {
+      "source": "/(de|en)(/.*)?",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/cases",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/cases/(.*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/admin(.*)?",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/docs(.*)?",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/services/(.*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/capabilities/(.*)",
       "destination": "/index.html"
     }
   ],
@@ -14,5 +50,7 @@
         }
       ]
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
