--- a/package.json
+++ b/package.json
@@ -52,10 +52,7 @@
     "sitemap": "npm run generate:sitemap",
     "build:sitemap": "npm run generate:sitemap && npm run build",
     "postbuild": "npm run generate:sitemap && npm run generate:og && npm run validate:cases:strict",
-    "heroku-postbuild": "npm run build",
-    "vite:dev": "vite",
-    "vite:build": "vite build",
-    "vite:preview": "vite preview"
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
