--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -23,19 +23,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
       
       - name: Install dependencies
         run: npm ci
       
       - name: Generate sitemap with updated lastmod
-        run: npm run generate:sitemap
+        run: npm run sitemap:update
       
       - name: Check for changes
         id: git-check
