--- a/.github/workflows/validate-cases.yml
+++ b/.github/workflows/validate-cases.yml
@@ -24,9 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
       - run: npm ci
 
       # Vorlauf: weiche Validierung (frühes Feedback)
