--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vercel/analytics": "^1.5.0",
@@ -33,7 +32,6 @@
     "react-scripts": "5.0.1",
     "recharts": "^3.2.1",
     "tailwindcss": "^3.4.18",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -81,12 +79,13 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/mermaid": "^9.1.0",
+    "@types/node": "^20.19.20",
     "@types/react-helmet": "^6.1.11",
-    "@types/react-router-dom": "^5.3.3",
     "@vercel/blob": "^2.0.0",
     "concurrently": "^9.2.1",
     "picocolors": "^1.1.1",
     "sharp": "^0.34.4",
-    "table": "^6.9.0"
+    "table": "^6.9.0",
+    "typescript": "^5.9.3"
   }
 }
