--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm ci
+      - run: npm ci --legacy-peer-deps
       - run: npm run build   # erzeugt automatisch sitemap.xml via postbuild
       - run: ls -la public   # Debug: sitemap.xml prüfen
 
