--- a/.github/workflows/report-cases.yml
+++ b/.github/workflows/report-cases.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 20
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm ci --legacy-peer-deps
 
       # (optional) frühe weiche Validierung
       - run: npm run validate:cases
