--- a/.github/workflows/validate-cases.yml
+++ b/.github/workflows/validate-cases.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm ci
+      - run: npm ci --legacy-peer-deps
 
       # Vorlauf: weiche Validierung (frühes Feedback)
       - run: npm run validate:cases
