fix: force Vercel cache clear - build mismatch issue
Problem: HTML references main.2ebc6e5b.js but Vercel built main.868626a1.js
Solution: Clear npm cache and force fresh build

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "use": "@vercel/static-build"
     }
   ],
-  "installCommand": "npm ci",
+  "installCommand": "npm ci --no-cache",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
   "rewrites": [
