--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,7 @@
 {
-  "version": 2,
-  "framework": "create-react-app",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
-  "installCommand": "npm ci --no-cache",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
+  "installCommand": "npm ci",
   "rewrites": [
     {
       "source": "/(de|en)(/.*)?",
