fix: add universal SPA fallback for all routes
Problem: Direct access to /de and other routes returned 404
Solution: Replace specific rewrites with catch-all rewrite /(.*) -> /index.html

This ensures all routes are handled by the React Router client-side.

--- a/vercel.json
+++ b/vercel.json
@@ -4,31 +4,7 @@
   "installCommand": "npm ci",
   "rewrites": [
     {
-      "source": "/(de|en)(/.*)?",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/cases",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/cases/(.*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/admin(.*)?",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/docs(.*)?",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/services/(.*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/capabilities/(.*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
