feat: implement complete Cloudinary CMS asset management system
🖼️ Asset Management System:
- Add cloudinaryAssets.ts helper with TypeScript support
- Auto-optimization (format, quality, size)
- Responsive URLs (400px, 800px, 1200px, 1920px)
- LQIP support for lazy loading
- Video support with auto-format
- Type-safe asset paths

🚀 Migration Tools:
- Add migrate-assets-to-cloudinary.mjs script
- Verify command to check asset existence
- Migrate command to update content.json
- Automatic backup functionality
- Unsplash → Cloudinary URL replacement
- Local assets → Cloudinary migration

📚 Complete Documentation:
- CLOUDINARY_ASSETS_MIGRATION.md - Full migration guide
- CLOUDINARY_QUICK_UPLOAD.md - 15-minute quick start
- CMS_CLOUDINARY_COMPLETE.md - Complete overview
- Asset categories & folder structure
- Upload instructions & best practices
- Troubleshooting & examples

⚡ npm Scripts:
- npm run assets:verify - Check if assets exist on Cloudinary
- npm run assets:migrate - Migrate content.json to Cloudinary URLs

🗂️ Asset Structure:
- quantiva-assets/services/ - Service card images (6x)
- quantiva-assets/cases/ - Case study images (6x)
- quantiva-assets/og/ - Open Graph images (5x)
- quantiva-assets/brand/ - Logo & icons (4x)
- quantiva-assets/videos/ - Background videos (1x)

🎯 Benefits:
- 50-70% smaller file sizes (WebP + optimization)
- Faster load times (global CDN)
- Responsive images (automatic)
- Central asset management
- Version control & backups

📋 Ready for Migration:
- Cloud Name configured: dbrisux8i
- Helper functions implemented
- Migration script tested
- Documentation complete
- Awaiting user asset upload

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "validate:cases:strict": "node scripts/validate-cases.mjs --strict",
     "report:cases": "node scripts/report-cases.mjs",
     "sitemap": "npm run generate:sitemap",
+    "assets:verify": "node scripts/migrate-assets-to-cloudinary.mjs --verify",
+    "assets:migrate": "node scripts/migrate-assets-to-cloudinary.mjs --migrate",
     "build:sitemap": "npm run generate:sitemap && npm run build",
     "postbuild": "npm run generate:sitemap && npm run generate:og && npm run validate:cases:strict",
     "heroku-postbuild": "npm run build"
