--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.1.5",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@testing-library/dom": "^10.4.1",
@@ -19,6 +20,7 @@
     "ajv-formats": "^3.0.1",
     "autoprefixer": "^10.4.21",
     "body-parser": "^2.2.0",
+    "contentful": "^11.8.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^12.23.22",
@@ -50,6 +52,7 @@
     "sitemap": "npm run generate:sitemap",
     "assets:verify": "node scripts/migrate-assets-to-cloudinary.mjs --verify",
     "assets:migrate": "node scripts/migrate-assets-to-cloudinary.mjs --migrate",
+    "contentful:migrate": "node scripts/migrate-to-contentful.mjs",
     "build:sitemap": "npm run generate:sitemap && npm run build",
     "postbuild": "npm run generate:sitemap && npm run generate:og && npm run validate:cases:strict",
     "heroku-postbuild": "npm run build"
@@ -85,6 +88,7 @@
     "@types/react-helmet": "^6.1.11",
     "@vercel/blob": "^2.0.0",
     "concurrently": "^9.2.1",
+    "contentful-management": "^11.60.4",
     "picocolors": "^1.1.1",
     "sharp": "^0.34.4",
     "table": "^6.9.0",
