--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "@vercel/blob": "^2.0.0",
     "concurrently": "^9.2.1",
     "contentful-management": "^11.60.4",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "picocolors": "^1.1.1",
     "sharp": "^0.34.4",
     "table": "^6.9.0",
