fix: resolve Vercel deployment routes-manifest error
🐛 VERCEL DEPLOYMENT FIX:

Problem:
- Error: routes-manifest.json couldn't be found
- Multiple lockfiles detected causing wrong root directory
- Vercel using /Users/herijeanmasum/ instead of project root

Solution:
✅ next.config.js:
- Added outputFileTracingRoot: __dirname
- Explicitly sets correct project root for Vercel

✅ vercel.json:
- Added 'framework': 'nextjs' (explicit detection)
- Removed 'buildCommand' (let Vercel auto-detect)
- Kept installCommand with --legacy-peer-deps
- Kept security headers

📊 Build Status:
✅ Local build: SUCCESS
✅ TypeScript: No errors
✅ ESLint: No warnings
✅ Sitemap: Generated
✅ OG Images: Generated

🚀 Should fix:
- routes-manifest.json error
- Multiple lockfiles warning
- Next.js 15.5.4 compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "next build",
   "installCommand": "npm ci --legacy-peer-deps",
+  "framework": "nextjs",
   "headers": [
     {
       "source": "/(.*)",
