fix: Add explicit Vercel rewrites for service routes to resolve 404 errors
🔧 Vercel Configuration Fix:
- Added explicit rewrites for /de/services/* and /en/services/* routes
- Ensures Vercel properly routes service pages
- Resolves 404 errors on service routes

📋 Technical Details:
- Added rewrites section to vercel.json
- Explicit routing for both German and English service pages
- Maintains existing security headers and framework configuration

🎯 Service Routes Fixed:
- /de/services/sap
- /de/services/cloud
- /de/services/ai
- /de/services/microservices
- /de/services/cyber-security
- /de/services/digital-strategy
- All English equivalents (/en/services/*)

This should resolve the persistent 404 errors on service routes by explicitly telling Vercel how to handle these paths.

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,16 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "npm ci --legacy-peer-deps",
   "framework": "nextjs",
+  "rewrites": [
+    {
+      "source": "/de/services/(.*)",
+      "destination": "/de/services/$1"
+    },
+    {
+      "source": "/en/services/(.*)",
+      "destination": "/en/services/$1"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
