--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ajv-formats": "^3.0.1",
     "autoprefixer": "^10.4.21",
     "body-parser": "^2.2.0",
+    "canvas": "^3.2.0",
     "contentful": "^11.8.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
