--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ai-sdk/xai": "^2.0.26",
     "@contentful/rich-text-react-renderer": "^16.1.5",
     "@heroicons/react": "^2.2.0",
     "@mdx-js/loader": "^3.1.1",
@@ -18,6 +19,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.0.21",
     "@vercel/speed-insights": "^1.2.0",
+    "ai": "^5.0.76",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "autoprefixer": "^10.4.21",
@@ -95,6 +97,7 @@
     "picocolors": "^1.1.1",
     "sharp": "^0.34.4",
     "table": "^6.9.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vercel": "^48.4.0"
   }
 }
