--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-helmet": "^6.1.0",
     "recharts": "^3.2.1",
     "tailwindcss": "^3.4.18",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^4.1.12"
   },
   "scripts": {
     "dev": "next dev",
