--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.33",
+    "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/xai": "^2.0.26",
     "@contentful/rich-text-react-renderer": "^16.1.5",
     "@heroicons/react": "^2.2.0",
@@ -39,7 +41,7 @@
     "recharts": "^3.2.1",
     "tailwindcss": "^3.4.18",
     "web-vitals": "^2.1.4",
-    "zod": "^4.1.12"
+    "zod": "4.1.12"
   },
   "scripts": {
     "dev": "next dev",
