--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^2.2.0",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
+    "@modelcontextprotocol/sdk": "^1.20.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -27,6 +28,7 @@
     "autoprefixer": "^10.4.21",
     "body-parser": "^2.2.0",
     "canvas": "^3.2.0",
+    "cloudinary": "^2.8.0",
     "contentful": "^11.8.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
