feat: Update project configuration and components
- Update GitHub workflows and validation
- Modify VideoCard and CareerPage components
- Update Next.js configuration and build files
- Clean up unused files and configurations
- Add new video components with subtitles support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,5 @@ jobs:
           cache: 'npm'
       - run: npm ci --legacy-peer-deps
       - run: npm run build   # erzeugt automatisch sitemap.xml via postbuild
-      - run: ls -la public   # Debug: sitemap.xml prüfen
+      - run: ls -la .next && head -10 .next/server/app/sitemap.xml || echo "Sitemap not found in .next"
 
