--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "quantiva-website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.33",
     "@ai-sdk/openai": "^2.0.52",
@@ -35,7 +38,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mermaid": "^11.12.0",
-    "next": "^15.5.4",
+    "next": "^16.0.1-canary.2",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
