fix: Update all documentation and scripts for Next.js
- Fix reporting script paths from src/data/ to app/lib/data/
- Remove outdated deploy.sh script (using Vercel)
- Update README.md from CRA/SPA to Next.js documentation
- Update Admin Dashboard docs with correct Next.js paths
- Update Deployment docs for Next.js App Router
- Update workflow comments with correct data paths
- Clean up build-output.txt references

All documentation now reflects Next.js 15 App Router structure

--- a/.github/workflows/validate-cases.yml
+++ b/.github/workflows/validate-cases.yml
@@ -6,14 +6,16 @@ on:
   workflow_dispatch:  # Manual trigger only
   # push:
   #   paths:
-  #     - "src/data/cases.json"
+  #     - "app/lib/data/cases.json"
+  #     - "app/lib/data/taxonomy.json"
   #     - "scripts/validate-cases.mjs"
   #     - "scripts/generate-og.mjs"
   #     - "scripts/migrate-cases.mjs"
   #     - "sitemap.mjs"
   # pull_request:
   #   paths:
-  #     - "src/data/cases.json"
+  #     - "app/lib/data/cases.json"
+  #     - "app/lib/data/taxonomy.json"
   #     - "scripts/validate-cases.mjs"
   #     - "scripts/generate-og.mjs"
   #     - "scripts/migrate-cases.mjs"
