fix: Complete Next.js migration - fix remaining path inconsistencies
- Update sitemap workflow paths from src/* to app/*
- Fix build workflow to check public/sitemap.xml instead of .next/server/app/sitemap.xml
- Update JSON_DATA_SYSTEM.md with correct Next.js App Router paths
- Fix GITHUB_LINKS.md with updated component and data file paths
- Update Admin Dashboard docs (STREAMLINED & ENHANCED) with app/ structure
- All documentation now consistently reflects Next.js 15 App Router

All remaining src/* references have been updated to app/lib/data/*

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,5 @@ jobs:
           cache: 'npm'
       - run: npm ci --legacy-peer-deps
       - run: npm run build   # erzeugt automatisch sitemap.xml via postbuild
-      - run: ls -la .next && head -10 .next/server/app/sitemap.xml || echo "Sitemap not found in .next"
+      - run: ls -la public && head -10 public/sitemap.xml || echo "sitemap.xml not found in public"
 
