--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches: [main]
     paths:
-      - 'src/data/cases.json'
-      - 'src/data/content.json'
-      - 'src/QuantivaWebsite.tsx'
+      - 'app/lib/data/cases.json'
+      - 'app/lib/data/content.json'
+      - 'app/lib/data/taxonomy.json'
+      - 'app/components/**/*'
+      - 'scripts/update-sitemap-lastmod.mjs'
       - 'sitemap.mjs'
   schedule:
     # Runs daily at 2 AM UTC
