--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mermaid": "^11.12.0",
-    "next": "^16.0.1-canary.2",
+    "next": "^15.1.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -71,8 +71,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "next/core-web-vitals"
     ]
   },
   "browserslist": {
