--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^2.8.0",
     "contentful": "^11.8.5",
     "cors": "^2.8.5",
+    "elasticlunr": "^0.9.5",
     "express": "^5.1.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
