--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "npm ci --legacy-peer-deps",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/de",
-      "permanent": false
-    }
-  ],
   "rewrites": [
     {
       "source": "/de/services/(.*)",
