--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mermaid": "^11.12.0",
-    "next": "^15.1.9",
+    "next": "15.1.9",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
